# hoot

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  flake.nix
.github/workflows/: build.yml
migrations/001-nostr_events/: up.sql
migrations/002-contacts/: up.sql
migrations/003-pubkey/: up.sql
migrations/004-user_contacts/: up.sql
migrations/005-drafts/: up.sql
migrations/006-deletions/: up.sql
migrations/007-trash/: up.sql
src/: account_manager.rs  db.rs  image_loader.rs  mail_event.rs  main.rs  profile_metadata.rs  style.rs  threaded_event.rs
src/keystorage/: basic_file_storage.rs  linux.rs  mod.rs  windows.rs
src/nostr/: filter.rs  mod.rs
src/nostr/event/: id.rs  kind.rs  mod.rs
src/nostr/event/tag/: kind.rs  mod.rs
src/relay/: message.rs  pool.rs
src/ui/: add_account_window.rs  compose_window.rs  contacts.rs  mod.rs  onboarding.rs  settings.rs  unlock_database.rs
