[package]
name = "hoot"
version = "0.1.0"
authors = ["Jack Chakany <jack@chakany.systems>"]
edition = "2021"
publish = false

[features]
profiling = [
    "dep:puffin",
    "dep:puffin_http",
    "eframe/puffin",
    "egui_extras/puffin",
]

[dependencies]
eframe = { version = "0.27.2", features = ["default", "persistence"] }
egui_extras = { version = "0.27.2", features = ["file", "image", "svg"] }
egui_tabs = { git = "https://github.com/damus-io/egui-tabs", rev = "120971fc43db6ba0b6f194f4bd4a66f7e00a4e22" }
image = { version = "0.25.1", features = ["jpeg", "png"] }
reqwest = { version = "0.12.9", default-features = false, features = ["blocking", "rustls-tls"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
puffin = { version = "0.19.0", optional = true }
puffin_http = { version = "0.16.0", optional = true }
ewebsock = { version = "0.6.0", features = ["tls"] }
rand = "0.8.5"
nostr = { version = "0.37.0", features = ["std", "nip59"] }
serde = "1.0.204"
serde_json = "1.0.121"
pollster = "0.4.0"
rusqlite = { version = "0.36.0", features = [
    "chrono",
    "serde_json",
    "bundled-sqlcipher-vendored-openssl",
    "functions",
] }
rusqlite_migration = { version = "2.2.0", features = ["from-directory"] }
anyhow = "1.0.96"
chrono = "0.4"
include_dir = "0.7.4"
keyring = { version =  "3.6.3", features = ["apple-native", "windows-native", "linux-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3.0.0"
